# adityadeoli.com

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CNAME  DEPLOYMENT.md  Dockerfile  PRODUCT.md  README.md  SYSTEM_AUDIT.md  alembic.ini  deploy.sh  docker-compose.yml  index.html  requirements.txt
.github/workflows/: e2e-tests.yml  integration-tests.yml
alembic/: env.py
alembic/versions/: 001_add_auth_tables.py  002_add_v2_endpoint_config.py  003_add_anomaly_trust_fields.py  004_sla_and_dashboard.py  005_add_alert_rules.py  006_add_incidents.py  007_add_ai_telemetry.py  008_add_schema_snapshots.py  009_add_security_findings.py  (+6 more)
app/: main.py
assets/: HeroScene-BsDs4SMm.js  index-CIx5cfcr.js  index-Cz-8RlLS.css
cli/: pyproject.toml
cli/github-actions/: sentinel-monitor.yml
cli/sentinel/: __init__.py  client.py  main.py
cli/sentinel/commands/: auth.py  endpoints.py  export.py  incidents.py
deploy/: backup.sh  deploy.sh  healthcheck.sh  setup-server.sh
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
n8n/: .env.example  docker-compose.yml
nginx/: nginx.conf  nginx.initial.conf
portfolio/: .env.example  Dockerfile  Dockerfile.portfolio  README.md  docker-compose.yml  index.html  jest.config.js  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
portfolio-showcase/: sentinelai.html  server-patch.js
scripts/: seed.py
tests/: architecture.md  conftest.py  docker-compose.test.yml  pytest.ini  requirements-test.txt  run_tests.sh  seed_data.py
(+374 files in other folders)
